基础特效添加结束

--- a/src/sass/cart.scss
+++ b/src/sass/cart.scss
@@ -191,7 +191,7 @@
     color: #cccccc;
     background: #ffffff;
     font-size: 14px;
-    cursor: not-allowed;
+    cursor: pointer;
     -webkit-transition: color 0.2s linear;
     transition: color 0.2s linear;
 }
