--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,7 +18,6 @@ body .top_bar {
         overflow: hidden;
         margin-left: 245px;
         margin-top: 20px;
-        background: red;
     }
 }
 body .top_bar .banner li{
@@ -472,6 +471,31 @@ body .brand_index{
 .goods-list {
     padding-left: 14px;
     box-sizing: border-box;
+}
+body .banner{
+    margin-left: 230px;
+    position: relative;
+    height: 360px;
+    width: 700px;
+    z-index: 0;
+    overflow: hidden;
+    margin-left: 245px;
+    margin-top: 20px;
+
+}
+.banner li{
+    padding-left: 0;
+    display: block!important;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    transition: all 1s;
+
+}
+.banner .pic {
+    height: 360px;
+    display: block;
+    margin: 0 auto;
 }
 .clear {
     zoom: 1;
